# hipcheck

./: .buf.yaml  .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Exec.kdl  LICENSE  LICENSE.md  README.md  SECURITY.md  dist-workspace.toml  install.sh  licenses.html
hipcheck/: Cargo.toml  build.rs  dist.toml
hipcheck-common/: Cargo.toml  build.rs
hipcheck-common/proto/hipcheck/v1/: default_policy_expr_request.proto  default_policy_expr_response.proto  empty.proto  explain_default_query_request.proto  explain_default_query_response.proto  hipcheck.proto  plugin_service.proto  query.proto  query_request.proto  query_response.proto  query_schemas_request.proto  (+4 more)
hipcheck-common/src/: chunk.rs  error.rs  types.rs
hipcheck-sdk-macros/: Cargo.toml
hipcheck-sdk-macros/src/: lib.rs
hipcheck/proto/: hipcheck.proto
hipcheck/src/: .gitignore  analysis.rs  benchmarking.rs  cache.rs  cli.rs  command_util.rs  config.rs  context.rs  data.rs  engine.rs  error.rs  exec.rs  executor.rs  filesystem.rs  git2_rustls_transport.rs  http.rs  kdl_config.rs  log_bridge.rs  main.rs  metric.rs  new_report_discussion.rs  pathbuf.rs  report.rs  report_discussion.rs  score.rs  session.rs  setup.rs  shell.rs  source.rs  target.rs  test_util.rs  tests.rs  try_any.rs  try_filter.rs  unstable.rs  util.rs  version.rs
hipcheck/src/analysis/: analysis.rs  mod.rs  report_builder.rs  result.rs  score.rs
hipcheck/src/cache/: mod.rs  plugin.rs  plugin_cache.rs  repo.rs  repo_cache.rs
hipcheck/src/data/: code_quality.rs  git_command.rs  hash.rs  mod.rs  modules.rs  npm.rs
hipcheck/src/engine/: mod.rs  salsa_cache.rs
hipcheck/src/error/: mod.rs
hipcheck/src/explain/: mod.rs  semver.rs
hipcheck/src/http/: authenticated_agent.rs  tls.rs
hipcheck/src/init/: git2_log_shim.rs  git2_rustls_transport.rs  indicatif_log_bridge.rs  mod.rs
hipcheck/src/metric/: activity.rs  affiliation.rs  binary.rs  churn.rs  commit_trust.rs  contributor_trust.rs  entropy.rs  fuzz.rs  identity.rs  math.rs  metric.rs  mod.rs  module.rs  module_contributors.rs  review.rs  typo.rs
hipcheck/src/plugin/: arch.rs  download_manifest.rs  kdl_parsing.rs  manager.rs  mod.rs  plugin_id.rs  plugin_manifest.rs  retrieval.rs  supported_arch.rs  types.rs
hipcheck/src/policy/: config_to_policy.rs  macros.rs  mod.rs  policy_file.rs  test_example.kdl  tests.rs
hipcheck/src/policy_exprs/: bridge.rs  env.rs  error.rs  expr.rs  json_pointer.rs  mod.rs  pass.rs  span.rs  token.rs
hipcheck/src/report/: mod.rs  report_builder.rs
hipcheck/src/session/: cyclone_dx.rs  mod.rs  pm.rs  session.rs  spdx.rs
hipcheck/src/shell/: color_choice.rs  iter.rs  macros.rs  mod.rs  par_iter.rs  prelude.rs  progress_phase.rs  spinner_phase.rs  verbosity.rs
hipcheck/src/source/: git.rs  mod.rs  progress.rs  query.rs  source.rs
hipcheck/src/util/: command.rs  fs.rs  git.rs  hidden.rs  iter.rs  kdl.rs  mod.rs  npm.rs  redacted.rs  test.rs  version.rs
hipcheck/tests/: smoke.rs
libs/hc_analysis/: Cargo.toml
libs/hc_analysis/src/: analysis.rs  lib.rs  report_builder.rs  score.rs
libs/hc_binary/: Cargo.toml
libs/hc_binary/src/: lib.rs  query.rs
libs/hc_common/: Cargo.toml  build.rs
libs/hc_common/src/: analysis.rs  command_util.rs  config.rs  context.rs  data.rs  error.rs  filesystem.rs  lib.rs  report.rs  shell.rs  test_util.rs  tests.rs  version.rs
libs/hc_core/: Cargo.toml
libs/hc_core/src/: lib.rs
libs/hc_data/: Cargo.toml
libs/hc_data/src/: code_quality.rs  git_command.rs  hash.rs  lib.rs  modules.rs  npm.rs
libs/hc_git/: Cargo.toml
libs/hc_git/src/: data.rs  lib.rs  parse.rs
libs/hc_github/: Cargo.toml
libs/hc_github/src/: authenticated_agent.rs  code_search.rs  graphql.rs  graphql_pr.rs  hidden.rs  lib.rs
libs/hc_metric/: Cargo.toml
libs/hc_metric/src/: activity.rs  affiliation.rs  binary.rs  churn.rs  commit_trust.rs  contributor_trust.rs  entropy.rs  fuzz.rs  identity.rs  lib.rs  module.rs  module_contributors.rs  review.rs  typo.rs
libs/hc_npm/: Cargo.toml
libs/hc_npm/src/: lib.rs
libs/hc_pm/: Cargo.toml
libs/hc_pm/src/: lib.rs
libs/hc_report_builder/: Cargo.toml
libs/hc_report_builder/src/: lib.rs
libs/hc_score/: Cargo.toml
libs/hc_score/src/: lib.rs
libs/hc_session/: Cargo.toml
libs/hc_session/src/: lib.rs
libs/hc_shell/: Cargo.toml
libs/hc_shell/src/: lib.rs
libs/hc_source/: Cargo.toml
libs/hc_source/src/: lib.rs  query.rs
libs/hc_version/: Cargo.toml
libs/hc_version/src/: build.rs  lib.rs  query.rs
plugins/activity/: Cargo.toml  dist.toml  local-plugin.kdl  local-release-plugin.kdl  plugin.kdl
plugins/activity/src/: main.rs
plugins/affiliation/: Cargo.toml  example_orgs.kdl  local-plugin.kdl  local-release-plugin.kdl  plugin.kdl
plugins/affiliation/src/: affiliator.rs  config.rs  enriched_contributor.rs  git.rs  github.rs  main.rs  org_spec.rs  org_types.rs
plugins/affiliation/test/: example_orgs.kdl
plugins/binary/: Cargo.toml  local-plugin.kdl  local-release-plugin.kdl  plugin.kdl
plugins/binary/src/: binary_detector.rs  main.rs
plugins/churn/: Cargo.toml  local-plugin.kdl  local-release-plugin.kdl  plugin.kdl
plugins/churn/src/: linguist.rs  main.rs  metric.rs  types.rs
plugins/dummy_rand_data/: Cargo.toml  build.rs
plugins/dummy_rand_data/src/: hipcheck_transport.rs  main.rs  transport.rs
plugins/dummy_rand_data_sdk/: Cargo.toml
plugins/dummy_rand_data_sdk/src/: main.rs
plugins/dummy_sha256/: Cargo.toml  build.rs
plugins/dummy_sha256/src/: hipcheck.rs  main.rs  transport.rs
plugins/entropy/: Cargo.toml  local-plugin.kdl  local-release-plugin.kdl  plugin.kdl
plugins/entropy/src/: linguist.rs  main.rs  metric.rs  types.rs
plugins/fuzz/: Cargo.toml  local-plugin.kdl  local-release-plugin.kdl  plugin.kdl
plugins/fuzz/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build.rs  exit.rs  main.rs  string.rs  workspace.rs
xtask/src/task/: bench.rs  buf.rs  build.rs  changelog.rs  check.rs  ci.rs  doc.rs  install.rs  mod.rs  rfd.rs  site.rs  validate.rs
(+689 files in other folders)
