#============================================================================
# Workspace Configuration
#----------------------------------------------------------------------------

[workspace]

# Use the newest, even better feature resolver.
#
# In the future we'll be able to remove this, but for now without it Cargo
# will default to the old resolver.
resolver = "3"

# Members of the workspace.
members = [
    "hipcheck",
    "library/hipcheck-common",
    "library/hipcheck-kdl",
    "library/hipcheck-macros",
    "library/hipcheck-sdk-macros",
    "library/hipcheck-workspace-hack",
    "sdk/rust",
    "plugins/git",
    "plugins/github",
    "plugins/npm",
    "plugins/activity",
    "plugins/affiliation",
    "plugins/binary",
    "plugins/churn",
    "plugins/entropy",
    "plugins/fuzz",
    "plugins/identity",
    "plugins/linguist",
    "plugins/review",
    "plugins/typo",
    "tests/test-plugins/activity-container",
    "tests/test-plugins/dummy_rand_data",
    "tests/test-plugins/dummy_sha256",
    "xtask",
]

# Make sure Hipcheck is run with `cargo run`.
#
# This means to use `xtask` with `cargo run` you need to specify the package.
# See `.cargo/config.toml` for how this is done.
#
# This list is equivalent to `members` except it removes `xtask` and the test
# plugin crates.
default-members = [
    "hipcheck",
    "library/hipcheck-common",
    "library/hipcheck-kdl",
    "library/hipcheck-macros",
    "library/hipcheck-sdk-macros",
    "library/hipcheck-workspace-hack",
    "sdk/rust",
    "plugins/git",
    "plugins/github",
    "plugins/npm",
    "plugins/activity",
    "plugins/affiliation",
    "plugins/binary",
    "plugins/churn",
    "plugins/entropy",
    "plugins/fuzz",
    "plugins/identity",
    "plugins/linguist",
    "plugins/review",
    "plugins/typo",
]

# The profile that 'cargo dist' will build with
#
# For now this is just the release profile, but with "thin" Link-Time
# Optimization enabled. This performs _some_ LTO and tries to hit the
# right trade-off between the runtime performance improvements of more
# LTO and the compile time cost of doing LTO.
[profile.dist]
inherits = "release"
lto = "thin"


#============================================================================
# `cargo-release` Configuration
#
# We use `cargo-release` to automate the release process, including creating
# a release commit, tagging it, and publishing to Crates.io.
#----------------------------------------------------------------------------

[workspace.metadata.release]

# Commit message to use when doing a release.
#
# This is in a Conventional Commits format to play nicely with `git-cliff`.
pre-release-commit-message = "chore: Release {{crate_name}}-v{{version}}"

# Whether to use a single commit when releasing versions of multiple
# crates in a workspace.
consolidate-commits = false


#============================================================================
# `cargo-autoinherit` Configuration
#
# We use `cargo-autoinherit` to set all dependencies at the workspace root
# level, so we limit the possibility of ending up with multiple versions of
# a single dependency.
#----------------------------------------------------------------------------

[workspace.metadata.cargo-autoinherit]
# Skip cargo-autoinherit for these packages
exclude-members = ["hipcheck-workspace-hack"]


#============================================================================
# Dependencies
#
# The Hipcheck project centralizes all dependencies at the workspace root,
# so here is where they're listed.
#----------------------------------------------------------------------------

[workspace.dependencies]
anyhow = "1.0.100"
async-channel = "2.5.0"
async-stream = "0.3.6"
base64 = "0.22.1"
blake3 = "1.8.2"
chrono = "0.4.42"
clap = "4.5.52"
clap-verbosity-flag = "3.0.4"
console = "0.16.1"
content_inspector = "0.2.4"
convert_case = "0.9.0"
csv = "1.4.0"
cyclonedx-bom = "0.8.0"
dashmap = { version = "6.1.0", default-features = false }
dialoguer = "0.12.0"
dirs = "6.0.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
finl_unicode = "1.4.0"
flate2 = "1.1.5"
fs_extra = "1.3.0"
futures = "0.3.31"
git2 = "0.20.2"
gix = { version = "0.74.1", default-features = false }
glob = "0.3.3"
gomod-rs = "0.1.1"
graphql_client = "0.14.0"
hex = "0.4.3"
hipcheck-common = { version = "0.4.2", path = "library/hipcheck-common" }
hipcheck-kdl = { version = "0.1.0", path = "library/hipcheck-kdl" }
hipcheck-macros = { version = "0.3.5", path = "library/hipcheck-macros" }
hipcheck-sdk = { version = "0.6.1", path = "sdk/rust" }
hipcheck-sdk-macros = { version = "0.2.1", path = "library/hipcheck-sdk-macros" }
hipcheck-workspace-hack = { version = "0.1", path = "library/hipcheck-workspace-hack" }
http = "1.3.1"
indexmap = "2.12.0"
indextree = "4.7.4"
indicatif = "0.18.3"
itertools = "0.14.0"
jiff = { version = "0.2.16", default-features = false }
kdl = "6.5.0"
lazy_static = "1.5.0"
log = { version = "0.4.28", default-features = false }
logos = "0.15.1"
lru = "0.16.2"
maplit = "1.0.2"
miette = "7.6.0"
minijinja = "2.12.0"
minijinja-contrib = "2.12.0"
nom = "7.1.3"
num-traits = "0.2.19"
ordered-float = "5.1.0"
packageurl = "0.5.0"
pathbuf = "1.0.0"
pep440_rs = "0.7.3"
proc-macro2 = "1.0.103"
prost = "0.14.1"
pyproject-toml = "0.13.7"
quote = "1.0.42"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
rustls = { version = "0.23.35", default-features = false }
rustls-platform-verifier = "0.6.2"
salsa = "0.24.0"
schemars = "1.1.0"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.16.0"
sha2 = "0.10.9"
smart-default = "0.7.1"
spdx-rs = "0.5.5"
strum = "0.27.2"
strum_macros = "0.27.2"
syn = "2.0.110"
tabled = "0.20.0"
tar = "0.4.44"
tempfile = "3.23.0"
test-log = "0.2.18"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-stream = "0.1.17"
toml = "0.9.8"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
typify-macro = "0.5.0"
unicode-normalization = "0.1.25"
ureq = { version = "2.12.1", default-features = false }
url = "2.5.7"
walkdir = "2.5.0"
which = "8.0.0"
xml-rs = "1.0.0"
xshell = "0.2.7"
xz2 = "0.1.7"
zip = "6.0.0"
zstd = "0.13.3"
