[package]
name = "hipcheck-common"
description = "Common functionality for the Hipcheck gRPC protocol"
repository = "https://github.com/mitre/hipcheck"
version = "0.3.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
log = "0.4.25"
prost = "0.13.5"
serde_json = "1.0.139"
thiserror = "2.0.11"
tonic = "0.12.3"

[build-dependencies]
anyhow = "1.0.96"
pathbuf = "1.0.0"
tonic-build = "0.12.3"

[features]
default = ["rfd9-compat"]
rfd9-compat = []
