[package]
name = "hipcheck-sdk-macros"
description = "Helper macros for the `hipcheck-sdk` crate."
repository = "https://github.com/mitre/hipcheck"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.90"
convert_case = "0.6.0"
proc-macro2 = "1.0.87"
quote = "1.0.37"
syn = { version = "2.0.82", features = ["full", "printing"] }
