[package]
name = "hipcheck-sdk-macros"
description = "Helper macros for the `hipcheck-sdk` crate."
repository = "https://github.com/mitre/hipcheck"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.95"
convert_case = "0.7.1"
log = "0.4.22"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full", "printing"] }
