[package]
name = "hipcheck"
description = """
Automatically assess and score software packages for supply chain risk.
"""
keywords = ["security", "sbom"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"
version = "3.13.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://hipcheck.mitre.org"
repository = "https://github.com/mitre/hipcheck"
include = ["src/**", "../LICENSE", "../README.md", "build.rs", "proto/**"]
publish = false

# Rename the binary from the default "hipcheck" (based on the package name)
# to "hc".
[[bin]]
name = "hc"
path = "src/main.rs"

[features]

# Print timings feature is used to print timing information throughout
# Hipcheck's runtime.
print-timings = ["benchmarking"]

# Benchmarking enables the benchmarking module, containing special utilities
# for benchmarking.
benchmarking = []

[dependencies]

async-channel = "2.3.1"
async-stream = "0.3.6"
base64 = "0.22.1"
blake3 = "1.8.1"
cyclonedx-bom = "0.8.0"
dotenv = "0.15.0"
chrono = { version = "0.4.40", features = ["alloc", "serde"] }
clap = { version = "4.5.32", features = ["derive"] }
console = { version = "0.15.11", features = ["windows-console-colors"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
env_logger = { version = "0.11.6" }
flate2 = "1.1.0"
fs_extra = "1.3.0"
futures = "0.3.31"
# Vendor libgit2 and openssl so that they will be statically included
# and not cause problems on certain systems that might not have one or
# the other.
git2 = { version = "0.20.1", features = [
    "vendored-libgit2",
    "vendored-openssl",
] }
# Include with both a `path` and `version` reference.
# Local builds will use the `path` dependency, which may be a newer
# version than the one published to Crates.io.
# People building from Crates.io will use the published version.
#
# See: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-locations
hipcheck-kdl = { version = "0.1.0", path = "../library/hipcheck-kdl" }
hipcheck-macros = { path = "../library/hipcheck-macros", version = "0.3.4" }
http = "1.3.1"
indextree = "4.7.3"
indicatif = { version = "0.17.11", features = ["rayon"] }
itertools = "0.13.0"
jiff = "0.1.16"
log = "0.4.25"
logos = "0.15.0"
miette = { version = "7.4.0", features = ["fancy"] }
minijinja = "2.9.0"
minijinja-contrib = { version = "2.7.0", features = ["datetime"] }
nom = "7.1.3"
num-traits = "0.2.19"
ordered-float = { version = "5.0.0", features = ["serde"] }
packageurl = "0.4.1"
pathbuf = "1.0.0"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
# Exactly matching the version of rustls used by ureq
# Get rid of default features since we don't use the AWS backed crypto
# provider (we use ring) and it breaks stuff on windows.
rustls = { version = "0.23.10", default-features = false, features = [
    "logging",
    "std",
    "tls12",
    "ring",
] }
rustls-platform-verifier = "0.5.0"
salsa = "0.19.0"
schemars = { version = "0.8.22", default-features = false, features = [
    "derive",
    "preserve_order",
    "chrono",
    "url",
] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.139"
sha256 = { version = "1.6.0", default-features = false }
smart-default = "0.7.1"
spdx-rs = "0.5.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tabled = "0.18.0"
tar = "0.4.44"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "sync", "time", "process", "fs"] }
tokio-stream = "0.1.17"
toml = "0.8.20"
tonic = "0.13.0"
thiserror = "2.0.12"
ureq = { version = "2.12.1", default-features = false, features = [
    "json",
    "tls",
] }
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"
which = { version = "7.0.2", default-features = false }
xml-rs = "0.8.26"
xz2 = "0.1.7"
zip = "2.3.0"
zstd = "0.13.3"
hipcheck-common = { version = "0.4.1", path = "../library/hipcheck-common", features = [
    "rfd9-compat",
] }
serde_with = "3.12.0"
hipcheck-workspace-hack = { version = "0.1", path = "../library/hipcheck-workspace-hack" }
gomod-rs = "0.1.1"

[build-dependencies]

anyhow = "1.0.97"
pathbuf = "1.0.0"
schemars = { version = "0.8.22", features = ["chrono", "url"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
url = { version = "2.5.4", features = ["serde"] }
which = { version = "7.0.2", default-features = false }

[dev-dependencies]

dirs = "6.0.0"
test-log = "0.2.17"

[package.metadata.cargo-machete]
ignored = ["xml-rs"]
